added comments to this PR that will be useful going forward

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,13 +11,7 @@
   <mat-sidenav #sidenav mode="side" class="app-sidenav">
     <app-user></app-user>
     <nav>
-      <a
-        mat-button
-        class="nav-link"
-        *ngFor="let link of links"
-        [routerLink]="link.path"
-        routerLinkActive="active"
-      >
+      <a mat-button class="nav-link" *ngFor="let link of links" [routerLink]="link.path" routerLinkActive="active">
         <mat-icon>{{ link.icon }}</mat-icon>
         {{ link.label }}
       </a>
