pushed all the way through the ngRx demo, whoo!

--- a/src/app/auth/components/login-page/login-page.component.html
+++ b/src/app/auth/components/login-page/login-page.component.html
@@ -5,9 +5,6 @@
   <router-outlet *ngIf="user$ | async; else loginForm"></router-outlet>
 
   <ng-template #loginForm>
-    <app-login-form
-      [error]="error$ | async"
-      (login)="onLogin($event)"
-    ></app-login-form>
+    <app-login-form [error]="error$ | async" (login)="onLogin($event)"></app-login-form>
   </ng-template>
 </ng-template>
